test/TestSuite/Scheduler/Errors/ts_no_rem_or_end.tjp
project "test" 2009-11-30 +2m {
  trackingscenario plan
}

resource r1 "R1"

task t1 "Task 1" {
  duration 5d
  allocate r1
}

timesheet r1 2009-11-30 +1w {
# MARK: error 14 ts_no_rem_or_end
  newtask t2 "A new task" {
    work 5d
    status green "All work done" {
      summary "I had good fun!"
      details -8<-
        This task went smoothly and I got three things done:
        * Have fun
        * Be on time
        * Get things done
      ->8-
    }
  }
}


